<resources>
    <string name="app_name">finalcalculator</string>
    <string name="ac">AC</string>
    <string name="left_br">(</string>
    <string name="right_br">)</string>
    <string name="devide">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="threee">3</string>
    <string name="multiple">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="plus">+</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="minus">-</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="back">back</string>
    <string name="equal">=</string>
</resources>