<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/math_operation"
        android:layout_width="match_parent"
        android:layout_height="160sp"
        android:maxLines="2"
        android:padding="10dp"
        android:ellipsize="start"
        android:gravity="center_vertical|end"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ac_btn"
                style="@style/ActionButton"
                android:text="@string/ac" />

            <TextView
                android:id="@+id/left_br_btn"
                style="@style/ActionButton"
                android:text="@string/left_br" />


            <TextView
                android:id="@+id/right_br_btn"
                style="@style/ActionButton"
                android:text="@string/right_br" />

            <TextView
                android:id="@+id/devide_btn"
                style="@style/ActionButton"
                android:text="@string/devide" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_1"
                style="@style/NumberButton"
                android:text="@string/one" />

            <TextView
                android:id="@+id/btn_2"
                style="@style/NumberButton"
                android:text="@string/two" />

            <TextView
                android:id="@+id/btn_3"
                style="@style/NumberButton"
                android:text="@string/threee" />

            <TextView
                android:id="@+id/multiply_btn"
                style="@style/ActionButton"
                android:text="@string/multiple" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_4"
                style="@style/NumberButton"
                android:text="@string/four" />

            <TextView
                android:id="@+id/btn_5"
                style="@style/NumberButton"
                android:text="@string/five" />

            <TextView
                android:id="@+id/btn_6"
                style="@style/NumberButton"
                android:text="@string/six" />

            <TextView
                android:id="@+id/plus_btn"
                style="@style/ActionButton"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_7"
                style="@style/NumberButton"
                android:text="@string/seven" />

            <TextView
                android:id="@+id/btn_8"
                style="@style/NumberButton"
                android:text="@string/eight" />

            <TextView
                android:id="@+id/btn_9"
                style="@style/NumberButton"
                android:text="@string/nine" />

            <TextView
                android:id="@+id/minus_btn"
                style="@style/ActionButton"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/point_btn"
                style="@style/NumberButton"
                android:text="@string/point" />

            <TextView
                android:id="@+id/btn_0"
                style="@style/NumberButton"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/back_btn"
                style="@style/NumberButton"
                android:text="@string/back" />

            <TextView
                android:id="@+id/equal_btn"
                style="@style/ActionButton"
                android:text="@string/equal" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>